--- a/sample.html
+++ b/sample.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://kit.fontawesome.com/25efbb1178.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="sample.css" />
     <title>演習問題</title>
